--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <div class="description">
                                 <h2>Welcome to the home of Gooey Goodness</h2>
                                 <br>
-                                <h5>Be amazed by the best looking bootstrap landing page on the web! Your new app deserves an amazing page to show all of its features. Clear visual, light colours and beautifully aligned elements - they all try to make the users aware of your great app features!</h5>
+                                <h5>The Little Popper is an exceptional and unique gourmet popcorn company! Our company was started with an idea that popcorn can have a place in the world of decadent deserts, and was meant to be experienced by gourmet popcorn lovers all over the world over!  Our family has spent over three years working on our secret recipes, now we are able to spread the love all over the world. <strong>YUM!</strong></h5>
                             </div>
                             <div class="buttons">
                                 <button class="btn btn-fill btn-neutral">
