--- a/index.html
+++ b/index.html
@@ -121,14 +121,12 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="description">
-                                <h4 class="header-text">It's beautiful</h4>
-                                <p>And your app is also probably social, awesome, easy-to-use and vital to users. This is the place to enlist all the good things that your app has to share. Focus on the benefits that the uers will receive. Try to combine imaginery with text and show meaningful printscreens from your app, that will make it clear what exactly the basic functions are. </p>
-                                <p>Try to make it very clear for the people browsing the page that this product will enrich their life and will make a nice addition to the homescreen.
-                                <p>
+                                <h4 class="header-text">Our Goal</h4>
+                                <p>Our goal is to give you best quality popcorn at a reasonable price, we can customize any type of popcorn you would like and it's all about the customers needs and wants. We work hard to bring you the best! We don't settle for anything less than top quality ingredients and top quality workmanship.   The Little Popper Gourmet Popcorn, is centered around hometown values, community spirit and neighborly love. We can help you with fundraising, corporate parties, birthday parties, weddings, and school events. WE all love popcorn so it will be a hit wherever we cater! </p>
                             </div>
                         </div>
                         <div class="col-md-5 col-md-offset-1 hidden-xs">
-                            <img src="assets/img/template/mac.png"/>
+                            <img src="assets/img/template/sideimage.png"/>
                         </div>
                     </div>
                 </div>
