changing logo placement

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                     <a href="http://www.creative-tim.com">
                         <div class="logo-container">
                             <div class="logo">
-                                <img src="assets/img/new_logo.png" alt="Creative Tim Logo">
+                                <img src="assets/img/template/tlp.png" alt="The Little Popper Logo">
                             </div>
                             <div class="brand">
-                                Creative Tim
+                                The Little Popper!
                             </div>
                         </div>
                     </a>
@@ -126,7 +126,7 @@
                             </div>
                         </div>
                         <div class="col-md-5 col-md-offset-1 hidden-xs">
-                            <img src="assets/img/template/sideimage.png"/>
+                            <img src="assets/img/template/sideimage.jpg"/>
                         </div>
                     </div>
                 </div>
