changing logo placement

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
                     </button>
                     <a href="http://www.creative-tim.com">
                         <div class="logo-container">
+<!-- Small Logo Pic
                             <div class="logo">
                                 <img src="assets/img/template/tlp.png" alt="The Little Popper Logo">
                             </div>
+-->
                             <div class="brand">
                                 The Little Popper!
                             </div>
