changing logo placement

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
                             </div>
 -->
                             <div class="brand">
-                                The Little Popper!
-                            </div>
+                                The Little Popper!</div>
                         </div>
                     </a>
                 </div>
