--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
                         <div class="col-md-6">
                             <div class="description">
                                 <h4 class="header-text">Our Goal</h4>
-                                <p>Our goal is to give you best quality popcorn at a reasonable price, we can customize any type of popcorn you would like and it's all about the customers needs and wants. We work hard to bring you the best! We don't settle for anything less than top quality ingredients and top quality workmanship.   The Little Popper Gourmet Popcorn, is centered around hometown values, community spirit and neighborly love. We can help you with fundraising, corporate parties, birthday parties, weddings, and school events. WE all love popcorn so it will be a hit wherever we cater! </p>
+                                <p>Our goal is to give you best quality popcorn at a reasonable price, we can customize any type of popcorn you would like and it's all about the customers needs and wants. We work hard to bring you the best! We don't settle for anything less than top quality ingredients and top quality workmanship.
+</p>
+<p>The Little Popper Gourmet Popcorn, is centered around hometown values, community spirit and neighborly love. We can help you with fundraising, corporate parties, birthday parties, weddings, and school events. WE all love popcorn so it will be a hit wherever we cater! </p>
                             </div>
                         </div>
                         <div class="col-md-5 col-md-offset-1 hidden-xs">
@@ -139,13 +141,13 @@
                             <div id="description-carousel" class="carousel fade" data-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="item">
-                                        <img src="assets/img/template/examples/home_33.jpg" alt="">
+                                        <img src="assets/img/template/examples/cheddar.jpg" alt="">
                                     </div>
                                     <div class="item active">
-                                        <img src="assets/img/template/examples/home_22.jpg" alt="">
+                                        <img src="assets/img/template/examples/cookie.jpg" alt="">
                                     </div>
                                     <div class="item">
-                                        <img src="assets/img/template/examples/home_11.jpg" alt="">
+                                        <img src="assets/img/template/examples/almond.jpg" alt="">
                                     </div>
                                 </div>
                                 <ol class="carousel-indicators carousel-indicators-blue">
@@ -156,9 +158,9 @@
                             </div>
                         </div>
                         <div class="col-md-5 col-md-offset-1">
-                            <h4 class="header-text">Easy to integrate</h4>
+                            <h4 class="header-text">Love at first bite!</h4>
                             <p>
-                                With all the apps that users love! Make it easy for users to share, like, post and tweet their favourite things from the app. Be sure to let users know they continue to remain connected while using your app!
+                                Make sure you taste some of our best flavors like gourmet cheddar popcorn, cookies and cream, and our wonderful Snicker flavors to start!
                             </p>
                             <a href="http://www.creative-tim.com/product/awesome-landing-page" id="Demo3" class="btn btn-fill btn-info" data-button="info">Get Free Demo</a>
                         </div>
