secure font awesome

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 </div>
                 <div class= "container">
                     <div class="row">
-                        <div class="col-md-6 hidden-xs">
+                        <div class="col-md-5">
                             <div class="parallax-image">
-                                <img class="phone" src="assets/img/template/tlp.png" style="margin-top: 110px"/>
+                                <img class="phone" src="assets/img/template/tlp.png" style="margin-top: 130px"/>
                             </div>
                         </div>
                         <div class="col-md-6 col-md-offset-1">
@@ -215,7 +215,7 @@
                                 </div>
                                 <div class="carousel-testimonial-caption">
                                     <p>Jay Z, Producer</p>
-                                    <h3>"I absolutely love your app! It's truly amazing and looks awesome!"</h3>
+                                    <h3>"I absolutely love your popcorn! It truly tastes amazing!"</h3>
                                 </div>
                             </div>
                             <div class="item active">
@@ -224,7 +224,7 @@
                                 </div>
                                 <div class="carousel-testimonial-caption">
                                     <p>Drake, Artist</p>
-                                    <h3>"This is one of the most awesome apps I've ever seen! Wish you luck Creative Tim!"</h3>
+                                    <h3>"This is one of the most awesome popcorns I've ever tasted! Wish you luck Little Popper!"</h3>
                                 </div>
                             </div>
                             <div class="item">
@@ -233,7 +233,7 @@
                                 </div>
                                 <div class="carousel-testimonial-caption">
                                     <p>Rick Ross, Musician</p>
-                                    <h3>"Loving this! Just picked it up the other day. Thank you for the work you put into this."</h3>
+                                    <h3>"Loving the freshness of this popcorn!! Picked it up about 10 days ago and it's still great!"</h3>
                                 </div>
                             </div>
                         </div>
@@ -251,9 +251,12 @@
                         <img class ="parallax-background-image" src="assets/img/template/bg3.jpg"/>
                     </div>
                     <div class="info">
-                        <h1>Download this landing page for free!</h1>
-                        <p>Beautiful multipurpose bootstrap landing page.</p>
-                        <a href="http://www.creative-tim.com/product/awesome-landing-page" class="btn btn-neutral btn-lg btn-fill">DOWNLOAD</a>
+                        <h1>The Little Popper</h1>
+                        <p>Address: 5387 Cliff Gookin, Tupelo, MS 38801
+                        </p>
+                        <p>Phone: (662) 610-6744</p>
+                        <p>Store Hours:  Mon.-Fri.: 10:00 am - 6:00 pm, Saturday: 10:00 am - 4:00 pm
+                        </p>
                     </div>
                 </div>
             </div>
