secure font awesome

--- a/index.html
+++ b/index.html
@@ -101,20 +101,12 @@
             </div>
             <div class="section section-gray section-clients">
                 <div class="container text-center">
-                    <h4 class="header-text">Friends in high places</h4>
-                    <p>
-                        Build customer confidence by listing your users! Anyone who has used your service and has been pleased with it should have a place here! From Fortune 500 to start-ups, all your app enthusiasts will be glad to be featured in this section. Moreover, users will feel confident seing someone vouching for your product!<br>
-                    </p>
-                    <div class="logos">
-                        <ul class="list-unstyled">
-                            <li ><img src="assets/img/logos/adobe.png"/></li>
-                            <li ><img src="assets/img/logos/zendesk.png"/></li>
-                            <li ><img src="assets/img/logos/ebay.png"/></i>
-                            <li ><img src="assets/img/logos/evernote.png"/></li>
-                            <li ><img src="assets/img/logos/airbnb.png"/></li>
-                            <li ><img src="assets/img/logos/zappos.png"/></li>
-                        </ul>
-                    </div>
+                    <h4 class="header-text">Contact Us!</h4>	
+                    <p>Address: 5387 Cliff Gookin, Tupelo, MS 38801
+                        </p>
+                        <p>Phone: (662) 610-6744</p>
+                        <p>Store Hours:  Mon.-Fri.: 10:00 am - 6:00 pm, Saturday: 10:00 am - 4:00 pm
+                        </p>
                 </div>
             </div>
             <div class="section section-presentation">
