secure font awesome

--- a/index.html
+++ b/index.html
@@ -99,16 +99,6 @@
                     </div>
                 </div>
             </div>
-            <div class="section section-gray section-clients">
-                <div class="container text-center">
-                    <h4 class="header-text">Contact Us!</h4>	
-                    <p>Address: 5387 Cliff Gookin, Tupelo, MS 38801
-                        </p>
-                        <p>Phone: (662) 610-6744</p>
-                        <p>Store Hours:  Mon.-Fri.: 10:00 am - 6:00 pm, Saturday: 10:00 am - 4:00 pm
-                        </p>
-                </div>
-            </div>
             <div class="section section-presentation">
                 <div class="container">
                     <div class="row">
@@ -243,7 +233,7 @@
                         <img class ="parallax-background-image" src="assets/img/template/bg3.jpg"/>
                     </div>
                     <div class="info">
-                        <h1>The Little Popper</h1>
+                        <h1>Contact Us</h1>
                         <p>Address: 5387 Cliff Gookin, Tupelo, MS 38801
                         </p>
                         <p>Phone: (662) 610-6744</p>
