secure font awesome

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             </div>
 -->
                             <div class="brand">
-                                The Little Popper!</div>
+                                Little Popper</div>
                         </div>
                     </a>
                 </div>
@@ -73,7 +73,7 @@
                 </div>
                 <div class= "container">
                     <div class="row">
-                        <div class="col-md-5">
+                        <div class="col-md-5 hidden-xs">
                             <div class="parallax-image">
                                 <img class="phone" src="assets/img/template/tlp.png" style="margin-top: 130px"/>
                             </div>
