--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <span class="icon-bar bar2"></span>
                     <span class="icon-bar bar3"></span>
                     </button>
-                    <a href="http://www.creative-tim.com">
+                    <a href="http://www.thelittlepopper.com">
                         <div class="logo-container">
                             <div class="logo">
                                 <img src="assets/img/template/tlp.png" alt="The Little Popper Logo">
