--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                 <div class="collapse navbar-collapse" id="example" >
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="#">
+                            <a href="http://www.facebook.com/sharer.php?u=https%3A%2F%2Fwww.thelittlepopper.com%2F">
                             <i class="fa fa-facebook-square"></i>
                             Like
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fwww.thelittlepopper.com%2F&original_referer=">
                             <i class="fa fa-twitter"></i>
                             Tweet
                             </a>
@@ -81,17 +81,6 @@
                                 <h2>Welcome to the home of Gooey Goodness</h2>
                                 <br>
                                 <h5>The Little Popper is an exceptional and unique gourmet popcorn company! Our company was started with an idea that popcorn can have a place in the world of decadent deserts, and was meant to be experienced by gourmet popcorn lovers all over the world over!  Our family has spent over three years working on our secret recipes, now we are able to spread the love all over the world. <strong>YUM!</strong></h5>
-                            </div>
-                            <div class="buttons">
-                                <button class="btn btn-fill btn-neutral">
-                                <i class="fa fa-apple"></i> Appstore
-                                </button>
-                                <button class="btn btn-simple btn-neutral">
-                                <i class="fa fa-android"></i>
-                                </button>
-                                <button class="btn btn-simple btn-neutral">
-                                <i class="fa fa-windows"></i>
-                                </button>
                             </div>
                         </div>
                     </div>
@@ -149,35 +138,35 @@
             </div>
             <div class="section section-features">
                 <div class="container">
-                    <h4 class="header-text text-center">Features</h4>
+                    <h4 class="header-text text-center">Services</h4>
                     <div class="row">
                         <div class="col-md-4">
                             <div class="card card-blue">
                                 <div class="icon">
-                                    <i class="pe-7s-note2"></i>
+                                    <i class="pe-7s-gift"></i>
                                 </div>
                                 <div class="text">
-                                    <h4>Online Customers Management</h4>
-                                    <p>All appointments sync with your Google calendar so your availability is always up to date. See your schedule at a glance from any device.</p>
+                                    <h4>Accessorize Your Party</h4>
+                                    <p>Whether it's a birthday party, wedding, or fund raiser, our popcorn can be that special extra touch!</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="card card-blue">
                                 <div class="icon">
-                                    <i class="pe-7s-bell"></i>
+                                    <i class="pe-7s-like2"></i>
                                 </div>
-                                <h4>Smart Notifications on hands</h4>
-                                <p>Automatic text and email reminders make sure customers always remember their upcoming appointments.</p>
+                                <h4>Custom Orders</h4>
+                                <p>We can fill your order for custom colors, flavors, or containers!</p>
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="card card-blue">
+                            <div class="card card-smile">
                                 <div class="icon">
                                     <i class="pe-7s-graph1"></i>
                                 </div>
-                                <h4>Know your business better now</h4>
-                                <p>Take payments and run your business on the go, in your store and then see how it all adds up with analytics.</p>
+                                <h4>Friendly Staff</h4>
+                                <p>Our staff is here to help you no matter the size of your order!</p>
                             </div>
                         </div>
                     </div>
@@ -251,26 +240,22 @@
                             </li>
                             <li>
                                 <a href="#">
-                                Company
+                                Flavors
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                Portfolio
+                                Contact Us
                                 </a>
                             </li>
-                            <li>
-                                <a href="#">
-                                Blog
-                                </a>
-                            </li>
+
                         </ul>
                     </nav>
                     <div class="social-area pull-right">
-                        <a class="btn btn-social btn-facebook btn-simple">
+                        <a class="btn btn-social btn-facebook btn-simple" href="http://www.facebook.com/sharer.php?u=https%3A%2F%2Fwww.thelittlepopper.com%2F">
                         <i class="fa fa-facebook-square"></i>
                         </a>
-                        <a class="btn btn-social btn-twitter btn-simple">
+                        <a class="btn btn-social btn-twitter btn-simple" href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fwww.thelittlepopper.com%2F&original_referer=">
                         <i class="fa fa-twitter"></i>
                         </a>
                         <a class="btn btn-social btn-pinterest btn-simple">
@@ -278,7 +263,7 @@
                         </a>
                     </div>
                     <div class="copyright">
-                        &copy; 2016 <a href="http://www.creative-tim.com">Creative Tim</a>, made with love
+                        &copy; 2016 <a href="http://www.thelittlepopper.com">The Little Popper</a>
                     </div>
                 </div>
             </footer>
