--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             <p>
                                 Make sure you taste some of our best flavors like gourmet cheddar popcorn, cookies and cream, and our wonderful Snicker flavors to start!
                             </p>
-                            <a href="http://www.creative-tim.com/product/awesome-landing-page" id="Demo3" class="btn btn-fill btn-info" data-button="info">Get Free Demo</a>
+                            <a href="https://www.thelittlepopper.com/popcorn-flavors/basic-flavors/" id="Demo3" class="btn btn-fill btn-info" data-button="info">Our Flavors</a>
                         </div>
                     </div>
                 </div>
@@ -159,16 +159,6 @@
                                 </div>
                                 <h4>Friendly Staff</h4>
                                 <p>Our staff is here to help you no matter the size of your order!</p>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card card-blue">
-                                
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card card-blue">
-                               
                             </div>
                         </div>
                     </div>
@@ -247,7 +237,7 @@
                             </li>
                             <li>
                                 <a href="#">
-                                Contact Us
+                                About Us
                                 </a>
                             </li>
 
