--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <div class="section section-no-padding">
                 <div class="parallax filter-gradient blue" data-color="blue">
                     <div class="parallax-background">
-                        <img class ="parallax-background-image" src="assets/img/template/bg3.jpg"/>
+                        <img class ="parallax-background-image" src="assets/img/template/bg1.jpeg"/>
                     </div>
                     <div class="info">
                         <h1>Contact Us</h1>
