--- a/index.html
+++ b/index.html
@@ -149,13 +149,21 @@
                                     <h4>Accessorize Your Party</h4>
                                     <p>Whether it's a birthday party, wedding, or fund raiser, our popcorn can be that special extra touch!</p>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card card-blue">
                                 <div class="icon">
                                     <i class="pe-7s-like2"></i>
                                 </div>
                                 <h4>Custom Orders</h4>
                                 <p>We can fill your order for custom colors, flavors, or containers!</p>
-                                 <div class="icon">
-                                    <i class="pe-7s-smile"></i>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card card-smile">
+                                <div class="icon">
+                                    <i class="pe-7s-graph1"></i>
                                 </div>
                                 <h4>Friendly Staff</h4>
                                 <p>Our staff is here to help you no matter the size of your order!</p>
