--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <div class="col-md-4">
                             <div class="card card-smile">
                                 <div class="icon">
-                                    <i class="pe-7s-graph1"></i>
+                                    <i class="pe-7s-smile"></i>
                                 </div>
                                 <h4>Friendly Staff</h4>
                                 <p>Our staff is here to help you no matter the size of your order!</p>
