--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="card card-smile">
+                            <div class="card card-blue">
                                 <div class="icon">
                                     <i class="pe-7s-smile"></i>
                                 </div>
